Don't prevent word wrapping on <code> elements

--- a/src/sass/partials/_code.scss
+++ b/src/sass/partials/_code.scss
@@ -15,7 +15,6 @@ samp {
 // Inline code
 code {
     color: $code-text-color;
-    white-space: nowrap;
 }
 
 // Keyboard text
